--- a/djaja_works/app/src/main/res/values/strings.xml
+++ b/djaja_works/app/src/main/res/values/strings.xml
@@ -1,6 +1,12 @@
 <resources>
     <string name="app_name">Djaya</string>
     <string name="shortcut_name">Fundaid Djaya</string>
+    <string name="hint_email">Email</string>
+    <string name="hint_pwd">Password</string>
+    <string name="text_login">Login</string>
+    <string name="text_not_member">Bukan Anggota? Daftar Disini.</string>
+    <string name="text_forget">Lupa Password?</string>
+
 
     <!-- TODO: Remove or change this placeholder text -->
     <string name="hello_blank_fragment">Hello blank fragment</string>
