--- a/djaja_works/app/src/main/res/values/strings.xml
+++ b/djaja_works/app/src/main/res/values/strings.xml
@@ -6,7 +6,7 @@
     <string name="text_login">Login</string>
     <string name="text_not_member">Bukan Anggota? Daftar Disini.</string>
     <string name="text_forget">Lupa Password?</string>
-    <string name="text_Username">Username</string>
+    <string name="text_Username">Nama Lengkap</string>
     <string name="text_Umur">Umur</string>
     <string name="text_JenisKelamin">Jenis Kelamin</string>
     <string name="text_nKtp">No.Ktp</string>
@@ -19,7 +19,7 @@
     <string name="text_deskripsiUsaha">Deskripsi</string>
 
 
-
     <!-- TODO: Remove or change this placeholder text -->
     <string name="hello_blank_fragment">Hello blank fragment</string>
+    <string name="invest_not_available">Tidak Ada Investasi</string>
 </resources>
