--- a/djaja_works/app/src/main/res/values/strings.xml
+++ b/djaja_works/app/src/main/res/values/strings.xml
@@ -12,6 +12,7 @@
     <string name="text_nKtp">No.Ktp</string>
     <string name="text_nRekening">No.Rekening</string>
     <string name="text_Register">Daftarkan.</string>
+    <string name="text_batal">Batalkan</string>
 
     <!--list-->
     <string name="text_deskripsiImg">Gambar</string>
@@ -22,4 +23,17 @@
     <!-- TODO: Remove or change this placeholder text -->
     <string name="hello_blank_fragment">Hello blank fragment</string>
     <string name="invest_not_available">Tidak Ada Investasi</string>
+
+    <!--Teks di menu add_usaha-->
+    <string name="text_nUsaha">Nama Usaha</string>
+    <string name="text_dUsaha">Deskripsi Usaha</string>
+    <string name="text_Llat">Latitude</string>
+    <string name="text_Llong">Longitude</string>
+    <string name="text_Lokasi">Lokasi</string>
+    <string name="text_uBulanan">Penghasilan Bulanan</string>
+    <string name="text_modal">Butuh Modal</string>
+    <string name="text_daftarUsaha">Daftarkan</string>
+    <string name="text_noteUsaha">Pastikan Usaha yang anda bangun minimal 1 bulan.</string>
+
+
 </resources>
